--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -480,6 +480,11 @@ body._lock{
                                             padding: 2px 0 0 0;
                                             color: #ca0000;
                                         }
+
+                                        .input-error1{
+                                            height: 16px;
+                                            padding-top: 2px;
+                                        }
                                         textarea{
                                             resize: none;
                                             margin: 0;
