--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -1,13 +1,17 @@
-@media (max-width: 491px) {
-    .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden{
+@media (max-width: 481px) {
+    .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden481{
         display: none;
     }
+    
     .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting{
         width: 100%;
     }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 730px) {
+    .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
+        display: none;
+    }
 }
 
 @media (max-width: 991px) {
@@ -21,7 +25,9 @@
 }
 
 @media (min-width: 992px) and (max-width: 1199px) { 
-    
+    .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
+        /* display: none; */
+    }
 }
 
 @media (max-width: 1670px) {
@@ -147,6 +153,10 @@
     .info__paragraphs .par-group .par{
         width: 100%;
     } 
+
+    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
+        display: none;
+    } */
 }
 
 @media (min-width: 1200px) { 
@@ -156,5 +166,8 @@
     } 
     .menu__list li{
         padding: 0 0 0 40px;           
+    }
+    .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
+        display: none;
     }
 }
