--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -274,7 +274,7 @@ body._lock{
                         display: flex;
                         flex-wrap: wrap;
                         margin: 0 -14px;                        
-                        
+                        padding-top: 5px;
                         .project__content{
                             // display: flex;
                             // flex-direction: column;
@@ -359,15 +359,18 @@ body._lock{
                     .about-us__container{
                         display: flex;
                         flex-wrap: wrap;
-                        margin: 0 -14px;
+                        margin: 0 -22px;
+                        // margin: 0 -14px;
+                        padding-top: 5px;
                         .emp-block{
                             display: flex;
                             flex-direction: column;
                             position: relative;
                             flex-grow: 1;
                             min-width: 248px;                            
-                            width: calc((100% - 56px) / 3);
-                            padding: 0 14px 28px 14px;
+                            width: calc((100% - 132px) / 4);
+                            // width: calc((100% - 56px) / 3);
+                            padding: 0 22px 36px 22px;
 
                             .emp-block__photo{
                                 // min-width: 528px;
@@ -382,7 +385,10 @@ body._lock{
                                 color: #474747;
                             }
                         }
-                        .emp-block-hiden{
+                        .emp-block-hiden481{
+                            visibility: hidden;
+                        }
+                        .emp-block-hiden-992-1199{
                             visibility: hidden;
                         }
                     }
