--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -18,6 +18,9 @@
 .page__filter > .section-wrapper{
     padding: 0;
 }
+.project__wrapper{
+    margin-bottom: 0 !important;
+}
 
 .filter__navigation{
     padding: 0 0 24px 0;
