--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -9,6 +9,9 @@
     .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
         grid-template-columns: repeat(1, 1fr) !important;
     }
+    .page__main .page__content .page__container .page__about-us .about-us .about-us__container{
+        grid-template-columns: repeat(1, 1fr) !important;
+    }
 }
 
 @media (max-width: 730px) {
@@ -29,6 +32,10 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 16px;
     }
+    .page__main .page__content .page__container .page__about-us .about-us .about-us__container{
+        grid-template-columns: repeat(2, 1fr);
+        /* gap: 16px; */
+    }
 
     .filter__navigation{
         display: none;
@@ -38,7 +45,7 @@
 @media (min-width: 992px) and (max-width: 1199px) { 
     /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
         /* display: none; */
-    } */
+    /* } */
 }
 
 @media (max-width: 1670px) {
