--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -225,32 +225,23 @@ body._lock {
   border: transparent;
 }
 .page__main .page__content .page__container .page__about-us .about-us .about-us__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 0 -22px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 22px 1fr 22px 1fr 22px 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 22px;
   padding-top: 5px;
 }
 .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   position: relative;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   min-width: 248px;
-  width: calc((100% - 132px) / 4);
-  padding: 0 22px 36px 22px;
+  width: 100%;
 }
 .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block .emp-block__photo {
+  width: 528px;
   max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block .emp-block__name {
   padding: 0.5rem 0 0.25rem 0;
