--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -147,28 +147,37 @@ body._lock {
   height: calc(100vh - 112px);
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 28px 1fr 28px 1fr;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -14px;
   margin-bottom: 28px;
   padding-top: 5px;
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: relative;
   min-width: 248px;
-  width: 100%;
+  width: calc((100% - 56px) / 3 + 18px);
+  padding: 0 14px 1.75rem 14px;
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img {
   position: relative;
+  max-width: 528px;
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img img {
   position: absolute;
   left: 0;
   top: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
+  width: 528px;
 }
 .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content .project__img .project__photo {
   width: 528px;
