--- a/assets/style/style_projects.css
+++ b/assets/style/style_projects.css
@@ -35,12 +35,51 @@
   transition: all 0.5s;
 }
 
-.anime {
+.animation {
   -webkit-transform: scale(0);
           transform: scale(0);
   opacity: 0;
 }
 
 .filter_hidden {
-  display: none;
+  -webkit-animation-name: hide;
+          animation-name: hide;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes hide {
+  0% {
+    visibility: visible;
+    height: 400px;
+  }
+  100% {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    min-width: 0;
+    min-height: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+  }
+}
+
+@keyframes hide {
+  0% {
+    visibility: visible;
+    height: 400px;
+  }
+  100% {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    min-width: 0;
+    min-height: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+  }
 }
