--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -38,33 +38,47 @@
 
 }
 
-.anime{
+.animation{
     transform: scale(0);
     opacity: 0;
 }
 
+// .filter_hidden{
+//     // display: none;
+
+
+
+
+// }
+
 .filter_hidden{
-    display: none;
+    // display: none;
+
+    animation-name: hide;
+    animation-duration: .5s;
+    animation-fill-mode: forwards;
 }
 
-// .filter_hidden{
-//     animation-name: hide;
-//     animation-duration: .5s;
-//     animation-fill-mode: forwards;
-// }
+.card-hide{
+    // display: none;
+}
 
-// @keyframes hide{
-//     from{
-//         // visibility: visible;
-//         height: fit-content;
-//     }
-//     to{
-//         width: 0;
-//         height: 0;
-//         margin: 0;
-//         padding: 0;
-//         font-size: 0;        
-//         display: none;
-//     }
-// }
+@keyframes hide{
+    0%{
+        visibility: visible;
+        height: 400px;
+    }
+  
+    100%{              
+        // display: none;
+        visibility: hidden;
+        width: 0;
+        height: 0;
+        min-width: 0;
+        min-height: 0;
+        margin: 0;
+        padding: 0;
+        font-size: 0;  
+    }
+}
 
