--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -6,13 +6,15 @@
     .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting{
         width: 100%;
     }
-    .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
+
+    
+    /* .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
         grid-template-columns: repeat(1, 1fr) !important;
-    }
-    .page__main .page__content .page__container .page__about-us .about-us .about-us__container{
-        grid-template-columns: repeat(1, 1fr) !important;
-    }
+    }*/
+
+     
 }
+
 
 @media (max-width: 730px) {
     /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
@@ -28,17 +30,33 @@
         width: 70%;
         margin: 0 auto;
     }
-    .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
+    
+    /* .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
         grid-template-columns: repeat(2, 1fr);
         gap: 16px;
-    }
+    } */
+
     .page__main .page__content .page__container .page__about-us .about-us .about-us__container{
         grid-template-columns: repeat(2, 1fr);
-        /* gap: 16px; */
+        gap: 16px; 
     }
 
     .filter__navigation{
         display: none;
+    }
+
+    .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content{
+        width: calc(((100% - 28px) / 2 ) + 13px);
+    }
+
+}
+
+@media (max-width: 575px) {
+    .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content{
+        width: 100% ;
+    }
+    .page__main .page__content .page__container .page__about-us .about-us .about-us__container{
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 
@@ -172,8 +190,12 @@
         width: 100%;
     } 
 
+    .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content{
+        padding-bottom: 1.125rem;
+    }
+
     /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
-        display: none;
+        display: none;  rem(28)
     } */
 }
 
