--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -16,10 +16,11 @@
 }
 
 
-@media (max-width: 730px) {
-    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
+
+@media (min-width: 991px) {
+    .menu__filter{
         display: none;
-    } */
+    }
 }
 
 @media (max-width: 991px) {
@@ -40,15 +41,182 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 16px; 
     }
-
-    .filter__navigation{
-        display: none;
-    }
-
+    
     .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper .project__content{
         width: calc(((100% - 28px) / 2 ) + 13px);
     }
 
+
+
+
+    
+    .filter__navigation{
+        /* display: block; */
+        padding: 0;
+        /* display: none; */
+    }
+
+  
+
+    .filter{
+        height: fit-content;
+        /* display: flex; */
+        /* justify-content: center; */
+        /* align-items: center; */
+        /* flex-direction: column; */
+        background-color: #F2F2F2;
+        margin-bottom: 20px;
+        /* position: relative; */
+        /* z-index: 8; */
+    }
+
+    .filter .menu__filter {
+        display: flex;
+        /* justify-content: center; */
+        position: relative;
+        height: 30px;
+        z-index: 7;
+        background-color: #F2F2F2;
+        border-bottom: #c5c5c5 1px solid;
+        /* width: 100%;         */
+
+
+        
+        
+    }
+
+    
+    .menu__filter .arrow-icon{
+        /* content: ""; */
+        position: absolute;
+        /* display: flex; */
+        /* justify-content: center; */
+        right: 0;
+        top: 2px;        
+        width: 20px;
+        height: 20px;
+        /* border: 2px solid #000; */
+        /* border-top: 2px solid transparent; */
+        /* border-right: 2px solid transparent; */
+        /* transform: rotate(-45deg); */
+        transition: all 0.3s ease 0s;
+    }
+
+    .menu__filter._filter-active .arrow-icon{
+        transform: rotate(-180deg);
+    }
+    .menu__filter .arrow-text{
+        /* position: absolute; */
+        /* left: 50px; */
+        /* margin: auto 0; */
+        /* margin-right: 32px; */
+        font-size: 25px;
+        font-weight: 700;
+    }
+
+    .page__main .page__header{
+        /* position: relative; */
+    }
+
+    .page__main .page__content {
+        padding-top: 0;
+    }
+    .filter__navigation{
+        /* position: relative; */
+        /* left: 0; */
+        /* top: 50px; */
+        z-index: 5;
+        height: fit-content;
+        width: 100%;
+
+
+
+
+        position: fixed;
+        left: 0;
+        top: 0 ;
+        /* right:0 ; */
+        /* width: 100% ; */
+        transition: all 1s ease 0s;
+        transform: translateY(-100%);
+        /* padding: 0 0 24px 0 !important; */
+    }
+
+    .filter__navigation._filter-active{
+        transform: translateY(120px);
+    }
+
+    .project__wrapper{
+        transition: all .5s ease 0s;
+        position: relative;
+        z-index: 0;
+    }
+    .project__wrapper._filter-active{
+        transform: translateY(160px);
+    }
+    footer{
+        transition: all .5s ease 0s;
+    }
+    footer._filter-active{
+        transform: translateY(160px);
+    }
+
+
+
+    .filter__navigation::after{
+        /* z-index: 9; */
+        /* background-color: rgb(242, 242, 242, .9);; */
+    }
+    
+
+
+    .filter__navigation .filter__navigation-list{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin: 20px 0;
+        /* flex-direction: column; */
+        /* flex-wrap: wrap; */
+        /* justify-content: space-around; */
+    }
+    .filter__navigation .filter__navigation-list .filter__all{
+        font-weight: 700;
+    }
+    .filter__navigation .filter__navigation-list .filter__btn{
+        border-bottom: transparent solid 1px;
+        width: fit-content;
+        padding: 20px 0 0 0;
+        font-size: 20px;
+        position: relative;
+        z-index: 1;
+        margin: 0 auto;
+        /* width: calc(100%  / 3 ); */
+        /* width: 200px; */
+        /* @include text_hover; */
+    }   
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+@media (max-width: 730px) {
+    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
+        display: none;
+    } */
+
+    .filter__navigation .filter__navigation-list{
+        grid-template-columns: repeat(2, 1fr);
+        
+    }
 }
 
 @media (max-width: 575px) {
@@ -57,7 +225,10 @@
     }
     .page__main .page__content .page__container .page__about-us .about-us .about-us__container{
         grid-template-columns: repeat(1, 1fr);
-    }
+        
+    }    
+
+
 }
 
 @media (min-width: 992px) and (max-width: 1199px) { 
@@ -76,6 +247,7 @@
     .page__main .page__header .page__container, .page__main .page__content .page__container, .page__footer .page__container{
         max-width: 970px;
     }
+
     .header__menu{
         height: 48px;
         display: flex;
@@ -153,7 +325,7 @@
 
     .menu .menu__body::before{
         content: "";
-        position: fixed;
+        /* position: fixed; */
         width: 100%;
         top: 0;
         left: 0;
@@ -195,7 +367,7 @@
     }
 
     /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
-        display: none;  rem(28)
+        display: none;
     } */
 }
 
