--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -16,7 +16,7 @@
 
 
 .page__filter > .section-wrapper{
-    padding: 0;
+    padding: 112px 0 0 0;
 }
 .project__wrapper{
     margin-bottom: 0 !important;
