--- a/assets/style/style_projects.css
+++ b/assets/style/style_projects.css
@@ -1,3 +1,9 @@
+._underscore {
+  border-bottom: #727272 solid 1px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
 .page__filter > .section-wrapper {
   padding: 0px 0 0 0;
 }
@@ -25,9 +31,6 @@
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   cursor: pointer;
-}
-.filter__navigation .filter__navigation-list li:active {
-  border: transparent;
 }
 
 .project__content {
